Squashed commit of the following:
commit 37f23ff73564ad4287a6c035a152d37668131d7b
Author: Danny White <3104761+dnywh@users.noreply.github.com>
Date:   Wed Jul 30 17:18:07 2025 +1000

    chore: readme

commit 2b8329d2c99a00e30350d48c8d32086f077efec8
Author: Danny White <3104761+dnywh@users.noreply.github.com>
Date:   Wed Jul 30 17:15:06 2025 +1000

    feat: open graph

commit acb44f74a5f18a29b73a0eefd1bd868cdbe7ed9e
Author: Danny White <3104761+dnywh@users.noreply.github.com>
Date:   Wed Jul 30 16:58:16 2025 +1000

    fix: more stringent

commit 1a04bb2b29017e951558516cc2860d6f77080508
Author: Danny White <3104761+dnywh@users.noreply.github.com>
Date:   Wed Jul 30 16:47:27 2025 +1000

    feat: note sorting

commit 720427cc24f729316db4f94386a88b8fe141943d
Author: Danny White <3104761+dnywh@users.noreply.github.com>
Date:   Wed Jul 30 16:41:55 2025 +1000

    fix: random

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trill</title>
+
+    <!-- Open Graph meta tags -->
+    <meta property="og:title" content="Trill" />
+    <meta property="og:description" content="Sing with strangers." />
+    <meta property="og:image" content="/open-graph-a.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://trill-topaz.vercel.app" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
